## 0.2.31-beta [Beta Version]
 - Add PWA (Service Worker) to "hiphp-desktop".
 - Updated installation options.
 - Update site files.
 - Add PWA installer as an option to settings in "hiphp-desktop".
 - Fix Dark Mode option.
 - Bug fixes & performance improvements.

## 0.2.30 [02-11-2022][Last Version]
 - Fix auto login in "hiphp-desktop".
 - Fix file info in "hiphp-desktop".
 - Add Dark Mode option to settings in "hiphp-desktop".
 - Add "--edt" command to edit files.
 - Fix "--down" command.
 - Fix default slash on windows server.
 - Change name of archive files.
 - Add "--rm" command to Delete files and folders.
 - Add a full site extractor to find HIPHP_HOLE_CODE.
 - Fix "hiphp --help" command.
 - Improve some commands.
 - Bug fixes & performance improvements.

## 0.2.29 [13-10-2022]
 - Add the ability to install hiphp on termux Android.
 - Add "--version" command.
 - Add Dark Mode template to "hiphp-desktop".
 - Bug fixes & performance improvements.

## 0.2.28 [27-09-2022]
 - Add "font-awesome" to "php-desktop".
 - Add icons to "php-desktop".
 - Add auto login to "php-desktop".
 - Add file information to "php-desktop".
 - Add line numbering to textarea editor in "php-desktop".
 - Fix "hiphp --dst" & "hiphp --tk" after installation on Ubuntu.
 - Bug fixes & performance improvements.

## 0.2.27 [13-09-2022]
 - Updated some CLI Errors messages.
 - Updated CLI logo.
 - Delete unused codes.
 - Upgrading "php-desktop" in order to avoid errors that occur with various systems.
 - Bug fixes & performance improvements.

## 0.2.26 [07-09-2022]
 - Upgraded Docker files in order to be able to work from outside the container.
 - Add download option in "hiphp_desktop".
 - Bug fixes & performance improvements.

## 0.2.25 [03-09-2022]
 - Fix "--down" command on windows os.
 - Color correction in the command line interface on windows os.
 - Bug fixes & performance improvements.

## 0.2.24 [28-08-2022]
 - Fix "hiphp --ftp"
 - Add "--cd" command for Change directory.