@@ -1,0 +1,19 @@
+;    .                                                          .
+;  --+----------------------------------------------------------+--
+;    .   Code by : yasserbdj96                                  .
+;    .   Email   : yasser.bdj96@gmail.com                       .
+;    .   Github  : https://github.com/yasserbdj96               .
+;    .   BTC     : bc1q2dks8w8uurca5xmfwv4jwl7upehyjjakr3xga9   .
+;  --+----------------------------------------------------------+--  
+;    .        all posts #yasserbdj96 ,all views my own.         .
+;  --+----------------------------------------------------------+--
+;    .                                                          .
+
+; START{
+
+;default python path:
+;ex:
+;python_default_path="C:\Users\Ron\AppData\Local\Programs\Python\Python39"
+python_default_path="python";If python is installed on the path, this option just for windows.
+
+;}END.
