@@ -18,7 +18,7 @@
    font-family: "Lucida Console", "Courier New", monospace;
 }
 
-input[type=text] {
+input[type=text], input[type=password] {
     padding: 5px 5px;
     margin: 4px 0;
     box-sizing: border-box;
@@ -316,7 +316,7 @@ input[type=submit] {
     position: absolute;
     width: 3.5rem;
     /* Determine appearance of line counter */
-    margin-top: 38px;
+    margin-top: 41px;
     /*display:none;*/
     height: calc(100vh - 38px);
 }
