@@ -1,2 +1,14 @@
-//s
-//e
+//   |                                                          |
+// --+----------------------------------------------------------+--
+//   |   Code by : yasserbdj96                                  |
+//   |   Email   : yasser.bdj96@gmail.com                       |
+//   |   Github  : https://github.com/yasserbdj96               |
+//   |   BTC     : bc1q2dks8w8uurca5xmfwv4jwl7upehyjjakr3xga9   |
+// --+----------------------------------------------------------+--  
+//   |        all posts #yasserbdj96 ,all views my own.         |
+// --+----------------------------------------------------------+--
+//   |                                                          |
+
+//START{
+    
+//}END.
