@@ -1,3 +1,17 @@
+/*
+   |                                                          |
+ --+----------------------------------------------------------+--
+   |   Code by : yasserbdj96                                  |
+   |   Email   : yasser.bdj96@gmail.com                       |
+   |   Github  : https://github.com/yasserbdj96               |
+   |   BTC     : bc1q2dks8w8uurca5xmfwv4jwl7upehyjjakr3xga9   |
+ --+----------------------------------------------------------+--  
+   |        all posts #yasserbdj96 ,all views my own.         |
+ --+----------------------------------------------------------+--
+   |                                                          |
+*/
+
+/*START{*/
 * {
   border: none;
   margin: 0;
@@ -18,3 +32,4 @@ html,body {
   width: 100%;
   height: 100px;
 }
+/*}END.*/
