@@ -1,4 +1,18 @@
+#!/bin/bash
+#   |                                                          |
+# --+----------------------------------------------------------+--
+#   |   Code by : yasserbdj96                                  |
+#   |   Email   : yasser.bdj96@gmail.com                       |
+#   |   Github  : https://github.com/yasserbdj96               |
+#   |   BTC     : bc1q2dks8w8uurca5xmfwv4jwl7upehyjjakr3xga9   |
+# --+----------------------------------------------------------+--  
+#   |        all posts #yasserbdj96 ,all views my own.         |
+# --+----------------------------------------------------------+--
+#   |                                                          |
+
+#START{
 python3 -m pip install -r ./requirements.txt
 python3 -m pip install -r ./requirements-pypi.txt
 python3 -m pip install -r ./hiphp-desktop/requirements-dst.txt
 python3 -m pip install -r ./hiphp-tk/requirements-tk.txt
+#}END.
